# Version.cmake

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in  version.rc.in
test/: CMakeLists.txt  main.cpp  test_version.h.in
test/cmake/: GetCPM.cmake
test/scripts/: build.sh  clean.sh  setup.sh
tools/: build.sh  clean.sh
